# OCUDU

./: CMakeLists.txt  README.md
apps/du/: du_low_main.cpp  fapi_stats.cpp  fapi_stats.h  fapi_stats_decorators.h  fapi_stats_record.h  fapi_stats_serializers.cpp  fapi_stats_serializers.h  fapi_xsm_logger.h  fapi_xsm_proxy.h  fapi_xsm_transport.cpp  fapi_xsm_transport.h
apps/units/flexible_o_du/split_6/o_du_high/: split6_plugin_xsm.cpp  split6_plugin_xsm.h
apps/units/flexible_o_du/split_6/o_du_low/: split6_o_du_low_plugin_xsm.cpp  split6_o_du_low_plugin_xsm.h
docs/: DEPLOYMENT.md
include/ocudu/hal/cuda/: prach_detector_gpu_kernel.h
include/ocudu/phy/upper/channel_processors/prach/: factories.h
include/ocudu/support/: fapi_split_trace.h  mac_phy_handoff_timing.h  mac_phy_latency_injector.h
include/ocudu/xsm/: CMakeLists.txt
lib/: CMakeLists.txt
lib/fapi/serialization/: CMakeLists.txt  fapi_message_type_id.h  fapi_serialization_buffer.h  fapi_serializer_common.h  fapi_serializer_p5.cpp  fapi_serializer_p5.h  fapi_serializer_p7_dl.cpp  fapi_serializer_p7_dl.h  fapi_serializer_p7_ind.cpp  fapi_serializer_p7_ind.h  fapi_serializer_p7_ul.cpp  fapi_serializer_p7_ul.h  fapi_xsm_message_header.h
lib/hal/: CMakeLists.txt
lib/hal/cuda/: CMakeLists.txt  prach_detector_gpu_kernel.cu  prach_detector_gpudx_kernel.cu
lib/ipc/: CMakeLists.txt
lib/ipc/xsm/: CMakeLists.txt  xsm_context.cpp  xsm_context.h
lib/phy/upper/: upper_phy_factories.cpp
lib/phy/upper/channel_processors/prach/: CMakeLists.txt  factories.cpp  prach_detector_generic_impl.cpp  prach_detector_generic_thresholds.cpp  prach_detector_gpu_impl.cpp  prach_detector_gpu_impl.h
lib/support/: fapi_split_trace.cpp  mac_phy_handoff_timing.cpp  mac_phy_latency_injector.cpp
tests/benchmarks/phy/upper/channel_processors/: prach_detector_benchmark.cpp
